NEWS for tlcockpit

version 0.7 (201711XX)
----------------------
requires tlmgr >= 2017-11-10
- fix behavior when closing using the Window Manager X on Windows (Issue: 2)
- use tlmgr json output
- allow ordering packages by name and by collection
- log and error output separated (Debug area)
- support for paper configuration and general options (besides multiple repos)

version 0.6 (20171012)
----------------------
- texlive infra updates handled properly (restarting tlmgr)
- scrollable list of files in pkg info window

version 0.5 (20171009)
----------------------
- better pkg info display
- try to open doc files from pkg info window
- dynamic updates of the update screen during updates

version 0.4 (20171004)
----------------------
First half-way usable version