@@ -2,12 +2,13 @@ NEWS for tlcockpit
 
 version 0.7 (201711XX)
 ----------------------
-requires tlmgr >= 2017-11-10
+requires tlmgr >= 2017-11-15
 - fix behavior when closing using the Window Manager X on Windows (Issue: 2)
 - use tlmgr json output
 - allow ordering packages by name and by collection
 - log and error output separated (Debug area)
-- support for paper configuration and general options (besides multiple repos)
+- support for paper configuration and general options
+- deal with dying tlmgr
 
 version 0.6 (20171012)
 ----------------------
